# python-unit-testing-demo

./: .gitignore  definitions.py  pyproject.toml  report.xml  test.py
automated_unit_testing_demo/: extractor.py
tests/: test_extractor.py
