[tool.poetry]
name = "automated-unit-testing-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "automated_unit_testing_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-html = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
